# Echosync-AI

./: .gitignore  BACKEND_TEST_RESULTS.md  COLAB_COMPLETE_GUIDE.md  COLAB_MINIMAL_GUIDE.md  COLAB_SETUP_CORRECTED.md  CONFIG_INTEGRATION.md  CORS_AND_SESSION_IMPROVEMENTS.md  DATASET_BACKUP_TRANSFER.md  EMERGENCY_FIX.md  FASTAPI_TESTING_QUICKSTART.md  FINETUNING_CHECKLIST.md  FINE_TUNING_GUIDE.md  INIT_REEXPORTS_SUMMARY.md  INTENT_EXTRACTION_FIXES.md  LLMRUNTIME_RLOCK_UPDATE.md  MANUAL_FINETUNING_WALKTHROUGH.md  MANUAL_TESTING_GUIDE.md  PROJECT_DOCUMENTATION.md  PROPERTY_TESTS_SUMMARY.md  QUICK_START_FINETUNING.md  README.md  SPEED_OPTIMIZATION_FIXES.md  START_HERE_FINETUNING.md  TAURI_SIDECAR_HANDLE_IMPROVEMENTS.md  TRANSCRIPTION_OPTIMIZATIONS.md  TROUBLESHOOTING.md  diagnostic.html  implementation_plan_1.md  index.html  latency_optimization_guide.md  latency_optimization_tasks.md  modern-ui.html  package-lock.json  package.json  pubspec.yaml  test-ui.html
sidecar/: config.py  echosync-sidecar.spec  main.py  pyproject.toml  requirements.txt  test_transcription.py
sidecar/agentic/: __init__.py  engine.py
sidecar/api/: __init__.py  websocket.py
sidecar/audio/: __init__.py  service.py  vad.py
sidecar/db/: __init__.py  conflicts.py  crud.py  database.py  models.py
sidecar/intent/: __init__.py  date_normalizer.py  engine.py  grammar.gbnf  grammar_simple.gbnf  models.py  sanitizer.py  simple_extractor.py
sidecar/llm/: __init__.py  runtime.py
sidecar/models_dl/: __init__.py  downloader.py
sidecar/notifications/: __init__.py  service.py
sidecar/stt/: __init__.py  (+1 more)
(+92 files in other folders)
