[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "echosync-sidecar"
version = "0.1.0"
description = "EchoSync AI Desktop — Python FastAPI sidecar (offline voice assistant backend)"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy==2.0.35",
    "pydantic==2.9.2",
    "faster-whisper==1.0.3",
    "sounddevice==0.5.0",
    "numpy==1.26.4",
    "onnxruntime==1.19.2",
    "llama-cpp-python==0.3.1",
    "sentence-transformers==3.1.1",
    "dateparser==1.2.0",
    "psutil==6.0.0",
    "httpx==0.27.2",
]

[project.optional-dependencies]
test = [
    "hypothesis==6.112.2",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
]

[project.scripts]
echosync-sidecar = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["audio*", "stt*", "router*", "intent*", "agentic*", "db*", "notifications*", "models_dl*", "llm*", "api*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hypothesis]
deriving = "echosync"
